--- a/style.css
+++ b/style.css
@@ -1,59 +1,122 @@
 .main-container {
-    margin: 0;
-    padding: 0;
     display: flex;
     width: 100%;
     height: 100%;
 }
 
 .side-panel {
-    margin: 0;
-    padding: 20px;
     flex: 1;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    background-color: #171717;
+}
+
+#info {
+}
+
+#var-sliders {
     overflow: auto;
+    scrollbar-width:thin;
+    scrollbar-color: gray #171717;
 }
 
 .fractal-canvas {
-    margin: 0;
-    padding: 0;
     flex: 4;
 }
 
+hr {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 2px solid white;
+    border-radius: 3px;
+}
+
+h2 {
+    color: #d8f999;
+    font-family: monospace;
+    margin: 0px;
+}
+
+p {
+    color: #fafafa;
+    font-family: monospace;
+    font-size: 13px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 15px;
+}
+
+b {
+    color: #7bf1a8;
+    font-size: 154x;
+}
+
+a {
+    color: #51a2ff;
+}
+
+canvas {
+    width: 100%;
+    height: 100%;
+}
+
+html,body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+/* Side Panel Elements */
 .equals {
     text-align: center;
+    font-size: 30px;
+    margin: 0;
 }
 
 .entry {
     display: grid;
-    grid-template-columns: 20px 1.5fr 10fr;
+    grid-template-columns: 50px 1.5fr 10fr;
     align-items: center;
-    font-size: 16px;
+    font-size: 20px;
     padding: 0px;
-    margin: 0px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-.equation-entry {
+.formula-entry {
     overflow: hidden;
     border: 1px gray solid;
-    padding: 0px;
+    border-radius: 5px;
+    padding: 4px;
     margin: 0px;
+    font-size: 20px;
 }
 
 .equation-indicator {
     text-align: center;
     align-items: center;
     margin: 0px;
+    font-size: 20px;
 }
 
-.var-sliders {
+#z0, #fz {
+    border: 0px;
+    width: 100%;
 }
+
+/* User Variable Slider Elements */
 
 .var-slider {
     display: grid;
     grid-template-columns: 50px 5fr;
-    border: 1px gray solid;
-    padding: 6px;
-    margin: 10px;
+    border: 3px gray solid;
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
     align-items: center;
 }
 
@@ -62,32 +125,20 @@
     font-size: 20px;
 }
 
-.latex {
-    width: 50px;
-    overflow: hidden;
+.var-identifier {
     text-align: center;
+    align-items: center;
+    font-size: 20px;
+    margin: 0px;
+}
+
+.latex {
+    width: 100%;
+    text-align: center;
+    overflow: hidden;
 }
 
 .slider-label {
     margin: 0px;
-}
-
-
-#z0,#fz {
-    border: 0px;
-    width: 100%;
-}
-
-canvas {
-    width: 100%;
-    height: 100%;
-}
-
-html,
-body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
+    text-align: center;
 }
