--- a/style.css
+++ b/style.css
@@ -10,9 +10,7 @@
     display: flex;
     flex-direction: column;
     background-color: #171717;
-}
-
-#info {
+    overflow: auto;
 }
 
 #var-sliders {
@@ -28,12 +26,18 @@
 hr {
     margin-top: 20px;
     margin-bottom: 20px;
-    border: 2px solid white;
+    border: 1px solid white;
     border-radius: 3px;
 }
 
+h1 {
+    color: #00bc7d;
+    font-family: monospace;
+    margin: 0px;
+}
+
 h2 {
-    color: #d8f999;
+    color: #53eafd;
     font-family: monospace;
     margin: 0px;
 }
@@ -70,6 +74,14 @@ html,body {
 }
 
 /* Side Panel Elements */
+.title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 5px;
+    width: 100%;
+}
+
 .equals {
     text-align: center;
     font-size: 30px;
