--- a/style.css
+++ b/style.css
@@ -4,23 +4,26 @@
     height: 100%;
 }
 
-.side-panel {
+#side-panel {
     flex: 1;
     padding: 20px;
     display: flex;
     flex-direction: column;
     background-color: #171717;
     overflow: auto;
+    scrollbar-width: thin;
+    scrollbar-color: gray #171717;
 }
 
 #var-sliders {
     overflow: auto;
-    scrollbar-width:thin;
+    scrollbar-width: thin;
     scrollbar-color: gray #171717;
 }
 
 .fractal-canvas {
     flex: 4;
+    position: relative;
 }
 
 hr {
@@ -48,7 +51,7 @@ p {
     font-size: 13px;
     margin-top: 5px;
     margin-bottom: 5px;
-    margin-left: 15px;
+    margin-left: 20px;
 }
 
 b {
@@ -63,6 +66,8 @@ a {
 canvas {
     width: 100%;
     height: 100%;
+    z-index: 1;
+    position: absolute;
 }
 
 html,body {
@@ -142,6 +147,43 @@ html,body {
 
 .preset-button:active {
     transform: scale(0.9);
+}
+
+.section-header {
+    display: flex;
+}
+
+.collapse-button {
+    background: none;
+    border-style: none;
+    transform: rotate(90deg);
+    color: #7bf1a8;
+    text-align: center;
+    padding: 6px;
+    padding-top: 2px;
+}
+
+.collapse-button:hover {
+    color: white;
+}
+
+#panel-collapse-button {
+    z-index: 2;
+    position: absolute;
+    margin: 10px;
+    width: 25px;
+    height: 25px;
+    padding: 0px;
+    padding-bottom: 2px;
+    background-color: #171717;
+    color: #7bf1a8;
+    border: 0px;
+    border-radius: 4px;
+    transform: rotate(180deg);
+}
+
+#panel-collapse-button:hover {
+    color: white;
 }
 
 /* User Variable Slider Elements */
